--- a/static site/main.css
+++ b/static site/main.css
@@ -34,6 +34,7 @@ p, button {
     left: 20px;
     top: 20px;
     transition: all .2s ease-in-out;
+    user-select: none;
 }
 
 .speed-toggle:hover {
@@ -85,7 +86,7 @@ button:active {
     align-items: center;
 }
 
-.equation {
+.equation, .answer {
     height: 100px;
     display: flex;
     align-items:  center;
@@ -118,7 +119,9 @@ button:active {
     background-color: rgba(211, 211, 211, .4);
     flex-direction: column;
     justify-content: space-around;
-    transition: all 5s ease 0s;
+    animation: pop-in-side .5s ease-out;
+    transform-origin: right;
+    perspective: 1000px;
     border-radius: 4px;
     user-select: none;
 }
@@ -238,5 +241,19 @@ button:active {
 
     100% {
         transform: rotateZ(90deg);
+    }
+}
+
+@keyframes pop-in-side {
+    0% {
+        transform: rotateY(90deg);
+    }    
+
+    80% {
+        transform: rotateY(-10deg);
+    }
+
+    100% {
+        transform: rotateY(0deg);
     }
 }
