--- a/static site/main.css
+++ b/static site/main.css
@@ -69,12 +69,17 @@ button {
     width: auto;
     padding-left: 1em;
     padding-right: 1em;
-    box-shadow: 0px 2px 0px 0px gray;
+    box-shadow: 2px 2px 0px 0px gray;
 }
 
-button:active {
-    transform: translateY(4px);
+button:focus {
+    outline: none;
+    box-shadow: 2px 2px 0px 0px white;
+}
+
+button:focus:active {
     box-shadow: none;
+    transform: translateY(4px);
 }
 
 .center-box {
@@ -127,9 +132,10 @@ button:active {
     height: 80%;
     width: clamp(100px, 10%, 200px);
     background-color: rgba(211, 211, 211, .4);
+    display: flex;
     flex-direction: column;
     justify-content: space-around;
-    animation: pop-in-side 1s ease-out;
+    transition: transform .6s;
     transform-origin: right;
     perspective: 1000px;
     border-radius: 4px;
@@ -172,6 +178,10 @@ button:active {
     -moz-animation-play-state:paused;
     -o-animation-play-state:paused; 
     animation-play-state:paused;
+}
+
+.closed {
+    transform: rotateY(-90deg);
 }
 
 @keyframes shake {
@@ -271,5 +281,26 @@ button:active {
 
     100% {
         box-shadow: none;
+    }
+}
+
+@media screen and (max-width: 600px) {
+    #menu-icon {
+        right: 0px;
+        top: 50px;
+    }
+
+    @keyframes blur-focus {
+        0% {
+            box-shadow: none;
+        }
+    
+        50% {
+            box-shadow: 0 0 0 80vh rgba(211, 211, 211, .4);
+        }
+    
+        100% {
+            box-shadow: none;
+        }
     }
 }
