--- a/static site/main.css
+++ b/static site/main.css
@@ -8,7 +8,7 @@ html, body {
 }
 
 body {
-    background-image: linear-gradient(60deg, #3d3393 0%, #2b76b9 37%, #2cacd1 65%, #35eb93 100%);
+    background-image: linear-gradient(to bottom, #16222a, #3a6073);
     background-repeat: no-repeat;
 
 }
@@ -226,7 +226,7 @@ ul.menu-items > li:last-child {
 
 #time-left {
     filter: brightness(.8);
-    animation: breathe 600ms ease 0ms infinite;
+    animation: breathe 1000ms ease 0ms infinite;
 }
 
 @keyframes shake {
@@ -394,12 +394,8 @@ ul.menu-items > li:last-child {
         display: none;
     }
 
-    h1 {
+    h1, h2 {
         font-size: 20px;
-    }
-
-    h2 {
-        font-size: 18px;
     }
 
     p, button {
