--- a/static site/main.css
+++ b/static site/main.css
@@ -61,6 +61,9 @@ li {
     -webkit-user-select: none;
 }
 
+#speed-outer:active, #speed-toggle:active {
+    -webkit-tap-highlight-color: transparent;
+}
 
 .fast-slow {
     animation: fast-slow .5s ease forwards;
